# oathgen

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  base32_sha256_test_secret.txt  base32_sha512_test_secret.txt  base32_test.cpp  bop.hpp  build.sh  build_notes.txt  global.hpp  hex_sha256_test_secret.txt  main.cpp  main.hpp  oath.hpp  readme.md  readme.txt  strings.hpp  test.hpp
alt_base32/: alt_base32.cpp  alt_base32.h  readme.txt
base32test/: base32_test.cpp
src/: base32_test_secret.txt  bop.hpp  build_notes.txt  hex_sha512_test_secret.txt  main.cpp  strings.hpp
